samples/_failures_safe/1760960033_8196be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e503f90b.c: In function ‘main’:
./samples/SAFE/__tmp_e503f90b.c:174:69: error: expected ‘)’ at end of input
  174 |         if (event == EVENT_DATA && sm.current_state == STATE_READING
      |            ~                                                        ^
      |                                                                     )
./samples/SAFE/__tmp_e503f90b.c:174:9: error: expected declaration or statement at end of input
  174 |         if (event == EVENT_DATA && sm.current_state == STATE_READING
      |         ^~
./samples/SAFE/__tmp_e503f90b.c:174:9: error: expected declaration or statement at end of input
